--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=asg0/src/asg0.html">
+    <title>Asg0</title>
+</head>
+<body>
+    <p>redirecting to <a href="asg0/src/asg0.html">asg0.html</a></p>
+</body>
+</html>
