--- a/asg0/src/asg0.html
+++ b/asg0/src/asg0.html
@@ -7,6 +7,12 @@
 </head>
 
 <body onload="main()">
+    <div>
+        <p>Name: Xi, Gwankun</p>
+        <p>Email: daodomin@ucsc.edu</p>
+        <p>Notes to Grader: none</p>
+    </div>
+
     <canvas id="example" width="400" height="400">
         Please use a browser that supports "canvas"
     </canvas>
